@@ -6,6 +6,10 @@
      AllowUsers "blah blah" blah
      was broken; report and fix in bz#1757 from bitman.zhou AT centrify.com
      ok dtucker;
+   - djm@cvs.openbsd.org 2010/07/12 22:38:52
+     [ssh.c]
+     Make ExitOnForwardFailure work with fork-after-authentication ("ssh -f")
+     for protocol 2. ok markus@
 
 20100714
  - (tim) [contrib/redhat/openssh.spec] Bug 1796: Test for skip_x11_askpass
